--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --inline --hot",
-    "dev-html": "webpack-dev-server --config webpack.html-plugin.config.js --inline --hot"
+    "dev-html": "webpack-dev-server --config webpack.html.config.js --inline --hot"
   },
   "repository": {
     "type": "git",
